z-index fix

--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -37,7 +37,7 @@ $cal-z: 10;
 
 .cal-week .cal-day {
   // background-color: #fdfdfd;
-  z-index: -5;
+  // z-index: -5;
   border-right: 1pt solid #ddd;
 }
 
